force-app/main/default/objects/Related_Agreement_Contact__c/Related_Agreement_Contact__c.object-meta.xml
<CustomObject>
    <description>This custom object will be used store many to many relation between International Agreement and Contact</description>
    <label>Related Agreement Contact</label>
    <nameField>
        <displayFormat>RAC-{00000}</displayFormat>
        <label>Related Agreement Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Agreement Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>