force-app/main/default/objects/Related_Agreement_Contact__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>International_Agreement__c</referenceTo>
    <relationshipName>Agreement_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>