force-app/main/default/objects/Related_Agreement_Contact__c/fields/Direct_Contact__c.field-meta.xml
<CustomField>
    <fullName>Direct_Contact__c</fullName>
    <formula>IF( Contact__c = Agreement__r.Contact_Name__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Contact</label>
    <type>Checkbox</type>
</CustomField>