force-app/main/default/objects/Related_Agreement_Contact__c/fields/Unique_Record_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is to allow creating unique Related Interaction Contact Record i.e. one particular interaction can not be associated with same contact twice</description>
    <inlineHelpText>This field is to allow creating unique Related Interaction Contact Record i.e. one particular interaction can not be associated with same contact twice</inlineHelpText>
    <label>Unique Record Key</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>